--- a/src/components/Table/DataTable.css
+++ b/src/components/Table/DataTable.css
@@ -9,7 +9,7 @@ Table {
   font: bold;
 }
 
-.tableWrapper {
+.table-wrapper {
   top: 0;
   bottom: 0;
   left: 0;
@@ -19,20 +19,27 @@ Table {
   margin-left: 200px; /* same width as sidebar */
 }
 
-.tableSearch {
+.table-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 16px;
 }
 
-.editModal button {
+.modal button {
   color: white;
   cursor: pointer;
 }
 
-.editModal .save-edit {
+.modal .save {
   background-color: #ed254e;
 }
 
-.editModal .cancel-edit {
+.modal .save:hover {
+  background-color: #011936;
+}
+
+.modal .cancel:hover {
   background-color: #011936;
 }
 
@@ -40,10 +47,17 @@ Table {
   color: #ffffff;
 }
 
-.tableWrapper .empty-table {
+.table-wrapper .empty-table {
   display: flex;
   align-items: center;
   justify-content: center;
-  font: bold;
   font-size: large;
+}
+
+.MuiTableCell-root {
+  border-bottom: none;
+}
+
+.addButton {
+  background-color: #ed254e;
 }
