add aggregate data and color scheme update

--- a/src/components/Table/DataTable.css
+++ b/src/components/Table/DataTable.css
@@ -5,7 +5,7 @@ Table {
 }
 
 .table-cell {
-  background-color: #ed254e;
+  background-color: #e68e22;
   font: bold;
 }
 
@@ -32,7 +32,7 @@ Table {
 }
 
 .modal .save {
-  background-color: #ed254e;
+  background-color: #e68e22;
 }
 
 .modal .save:hover {
