--- a/src/components/Login/LoginPage.css
+++ b/src/components/Login/LoginPage.css
@@ -14,42 +14,42 @@
   margin: 20px 0;
 }
 
-.wrapper button {
+.wrapper Button {
   width: 88%;
   height: 35px;
   border: none;
-  border-radius: 10px;
+  border-radius: 4px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: 600;
   margin: 0 30px;
   padding: 0 50px;
   cursor: pointer;
+  background-color: #011936;
+}
+
+.wrapper Button:hover {
+  background-color: #0056b3;
 }
 
 .input-box input {
   width: 80%;
   height: 100%;
-  border: 2px solid;
-  border-radius: 10px;
+  border: 2px solid #011936;
+  border-radius: 4px;
   background: transparent;
   margin: 0 30px;
   padding: 0 15px;
+  color: black;
 }
 
 .input-box input::placeholder {
-  color: white;
-  font-size: 1rem;
+  font-size: 14px;
 }
 
 .input-box .icon {
   position: absolute;
   top: 25%;
   font-size: 150%;
-}
-
-.register {
-  color: white;
-  font-size: 1rem;
-  text-align: center;
+  fill: #011936;
 }
