--- a/src/components/Dashboards/Sales.css
+++ b/src/components/Dashboards/Sales.css
@@ -3,11 +3,16 @@ div .sales-wrapper {
   top: 0;
   bottom: 0;
   left: 0;
+  position: fixed;
+  overflow-y: scroll;
 }
 
 @media (max-width: 800px) {
   div .sales-wrapper {
     margin-left: 0;
+    display: grid;
+    flex-direction: column;
+    padding: 20px;
   }
 }
 
@@ -22,5 +27,8 @@ div .sales-charts {
 }
 
 div .sales-table-wrapper {
-  max-width: 100%;
+  display: grid;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
