--- a/src/components/Tables/SalesTable.css
+++ b/src/components/Tables/SalesTable.css
@@ -1,9 +1,17 @@
-div .table-wrapper {
+Table {
+  table-layout: fixed;
+  width: 100px;
+  min-width: 100px;
+}
+
+.table-wrapper {
+  top: 0;
   bottom: 0;
   left: 0;
-  margin: 0;
-  overflow: hidden;
-  position: relative;
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-left: 200px; /* same width as sidebar */
 }
 
 .table-wrapper .empty-table {
