--- a/src/components/Dashboards/Sales.css
+++ b/src/components/Dashboards/Sales.css
@@ -5,11 +5,13 @@ div .sales-wrapper {
   left: 0;
   position: fixed;
   overflow-y: scroll;
+  padding: 20px;
 }
 
 @media (max-width: 800px) {
   div .sales-wrapper {
     margin-left: 0;
+    margin-top: 50px;
     display: grid;
     flex-direction: column;
     padding: 20px;
