--- a/src/components/Dialogs/SellingDialog.css
+++ b/src/components/Dialogs/SellingDialog.css
@@ -1,10 +1,10 @@
 .save {
   color: white;
-  background-color: #011936;
+  background-color: #5865f2;
 }
 
 .save:hover {
-  background-color: #0056b3;
+  background-color: #2c2f33;
 }
 
 .cancel {
@@ -14,5 +14,5 @@
 
 .cancel:hover {
   color: white;
-  background-color: #0056b3;
+  background-color: #2c2f33;
 }
