--- a/src/components/Login/LoginPage.css
+++ b/src/components/Login/LoginPage.css
@@ -25,17 +25,17 @@
   margin: 0 30px;
   padding: 0 50px;
   cursor: pointer;
-  background-color: #011936;
+  background-color: #5865f2;
 }
 
 .wrapper Button:hover {
-  background-color: #0056b3;
+  background-color: #2c2f33;
 }
 
 .input-box input {
   width: 80%;
   height: 100%;
-  border: 2px solid #011936;
+  border: 2px solid #5865f2;
   border-radius: 4px;
   background: transparent;
   margin: 0 30px;
@@ -51,5 +51,5 @@
   position: absolute;
   top: 25%;
   font-size: 150%;
-  fill: #011936;
+  fill: #5865f2;
 }
