--- a/src/components/Menu/SideMenu.css
+++ b/src/components/Menu/SideMenu.css
@@ -6,8 +6,8 @@
   top: 0;
   left: 0;
   overflow-x: hidden;
-  padding-top: 20px;
-  background-color: #011936;
+  padding-top: 18px;
+  background-color: #fff;
 }
 
 @media (max-width: 800px) {
@@ -15,9 +15,10 @@
     display: none;
   }
 }
+
 .content {
   position: fixed;
-  background-color: #011936;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -31,49 +32,44 @@
   align-items: left;
 }
 
-.items {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 16px;
-  background-color: transparent;
-  display: block;
-  border: none;
-  text-align: right;
+.sidebar-items.active {
+  background-color: #5865f2;
   color: white;
+  margin: 0 15px 0 15px;
+  text-transform: initial;
 }
 
-.items.active {
-  font-weight: bold;
-  background-color: #0056b3;
-  color: white;
-}
-
-.items.dormant {
-  color: white;
-  font-weight: normal;
+.sidebar-items.dormant {
+  color: #2c2f33;
+  margin: 0 15px 0 15px;
+  text-transform: initial;
   &:hover {
-    background-color: #0056b3;
-    font-weight: bold;
+    background-color: #5865f2;
+    color: white;
   }
 }
 
 .logout {
   border: none;
-  width: 100%;
   font-size: 16px;
   margin-top: auto;
+  margin-left: 15px;
   text-align: center;
   cursor: pointer;
+  color: #5865f2;
 }
 
 .logout.button {
-  width: 100%;
   color: white;
-  background-color: #011936;
+  background-color: #5865f2;
 }
 
 .logout.button:hover {
   color: white;
-  font-weight: bold;
-  background-color: #0056b3;
+  background-color: #2c2f33;
+}
+
+.sidebar-icons {
+  font-size: x-large;
+  padding: 10px
 }
