--- a/src/components/Menu/TopAppBar.css
+++ b/src/components/Menu/TopAppBar.css
@@ -3,7 +3,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #011936;
+  background-color: #5865f2;
   min-width: 300px;
 }
 
@@ -14,20 +14,20 @@
 }
 
 .items.active {
-  font-weight: bold;
-  background-color: #0056b3;
+  background-color: #5865f2;
   color: white;
   border: none;
+  font-weight: bold;
   margin: 0 3px 0 3px;
+  text-transform: initial;
 }
 
 .items.dormant {
-  color: white;
-  font-weight: normal;
+  color: black;
   margin: 0 3px 0 3px;
-
+  text-transform: initial;
   &:hover {
-    background-color: #0056b3;
-    font-weight: bold;
+    background-color: #2c2f33;
+    color: white;
   }
 }
